--- a/Assets/Addons/LazyJedi/Editor/Windows/ProjectWindow/ProjectWindow.uss
+++ b/Assets/Addons/LazyJedi/Editor/Windows/ProjectWindow/ProjectWindow.uss
@@ -17,18 +17,9 @@
     border-right-width: 0.5px;
     border-bottom-width: 0.5px;
     border-left-width: 0.5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-    padding-top: 5px;
-    padding-right: 5px;
-    padding-bottom: 5px;
-    padding-left: 5px;
-    margin-top: 2px;
-    margin-right: 2px;
-    margin-bottom: 2px;
-    margin-left: 2px;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 2px;
     flex-shrink: 0;
 }
 
